Tilasse SDK ved å skrelle vekk div features fra OIDC ...

--- a/src/main/resources/application-systest.yaml
+++ b/src/main/resources/application-systest.yaml
@@ -3,3 +3,9 @@ spring:
   application:
     environment: systest
  
+# EUDIW auth server
+oauth-authorization-server:
+  issuer: https://auth.eidas2sandkasse.dev
+  scopes-supported:
+    - foo
+    - bar
