--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>no.idporten.actuator</groupId>
             <artifactId>idporten-actuator-starter</artifactId>
             <version>${idporten-actuator-starter.version}</version>
