--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,3 +14,9 @@ spring:
   application:
     environment: dev
   
+# EUDIW auth server
+oauth-authorization-server:
+  issuer: http://eudiw-oauth-server:9260
+  scopes-supported:
+    - foo
+    - bar
