--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -13,3 +13,9 @@ spring:
   application:
     environment: docker
 
+# EUDIW auth server
+oauth-authorization-server:
+  issuer: http://eudiw-oauth-server:9260
+  scopes-supported:
+    - foo
+    - bar
