--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,8 +29,8 @@ management:
 
 oauth-authorization-server:
   keystore:
-    type: ${KEYSTORE_TYPE}
-    location: ${KEYSTORE_LOCATION}
-    password: ${KEYSTORE_PASSWORD}
-    key-alias: ${KEYSTORE_KEY_ALIAS}
-    key-password: ${KEYSTORE_KEY_PASSORD}
+    type: ${TOKEN_SIGNING_KEYSTORE_TYPE}
+    location: ${TOKEN_SIGNING_KEYSTORE_LOCATION}
+    password: ${TOKEN_SIGNING_KEYSTORE_PASSWORD}
+    key-alias: ${TOKEN_SIGNING_KEYSTORE_KEY_ALIAS}
+    key-password: ${TOKEN_SIGNING_KEYSTORE_KEY_PASSORD}
