--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
         <idporten-actuator-starter.version>2.0.0</idporten-actuator-starter.version>
         <idporten-access-log.version>2.8.0</idporten-access-log.version>
+        <idporten-audit-version>2.5.0</idporten-audit-version>
         <opentelemetry-api.version>1.51.0</opentelemetry-api.version>
         <surefire.plugin.version>3.5.3</surefire.plugin.version>
         <log4j2.version>2.16.0</log4j2.version>
@@ -41,6 +42,18 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <dependency>
             <groupId>no.idporten.actuator</groupId>
             <artifactId>idporten-actuator-starter</artifactId>
             <version>${idporten-actuator-starter.version}</version>
@@ -49,6 +62,11 @@
             <groupId>no.idporten.logging</groupId>
             <artifactId>idporten-access-log-spring-boot-3-starter</artifactId>
             <version>${idporten-access-log.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>no.idporten.logging</groupId>
+            <artifactId>idporten-log-audit-spring-boot-3-starter</artifactId>
+            <version>${idporten-audit-version}</version>
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
