--- a/.github/workflows/call-buildimage.yml
+++ b/.github/workflows/call-buildimage.yml
@@ -17,7 +17,7 @@ jobs:
   build-publish-image:
     uses: felleslosninger/github-workflows/.github/workflows/ci-spring-boot-build-publish-image.yml@main
     with:
-      image-name: eudiw-oauth-server
+      image-name: digital-lommebok-oauth-server
       java-version: 24
     secrets: inherit
 
@@ -25,11 +25,11 @@ jobs:
     uses: felleslosninger/github-workflows/.github/workflows/ci-call-update-image.yml@main
     needs: build-publish-image
     with:
-      application-name: eudiw-oauth-server
+      application-name: digital-lommebok-oauth-server
       deployment-environment: systest
       image-digest: ${{ needs.build-publish-image.outputs.image-digest }}
-      image-name: eudiw-oauth-server
+      image-name: digital-lommebok-oauth-server
       image-version: ${{ needs.build-publish-image.outputs.image-version }}
-      kubernetes-repo: idporten-cd
-      product-name: eudiw
+      kubernetes-repo: digital-lommebok-cd
+      product-name: digital-lommebok
     secrets: inherit
