--- a/.trivyignore
+++ b/.trivyignore
@@ -1,3 +1,2 @@
-# trivy ignore
+# CVEs that Trivy will ignore
 # <CVE> # <package/affected code>. Fixed in <version>.
-#CVE-2025-22874 # stdlib crypto/x509: Usage of ExtKeyUsageAny disables policy validation in crypto/x509
