--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <surefire.plugin.version>3.5.3</surefire.plugin.version>
         <log4j2.version>2.16.0</log4j2.version>
         <nimbus-jose-jwt.version>10.3.1</nimbus-jose-jwt.version>
+        <oauth2-oidc-sdk.version>11.26</oauth2-oidc-sdk.version>
         <gson.version>2.13.1</gson.version> <!-- Gson version used by nimbus-jose-jwt, but for some reason the wrong version is included. remove when fixed-->
         <lombok.version>1.18.38</lombok.version>
         <slf4j-api.version>2.0.17</slf4j-api.version>
@@ -75,6 +76,11 @@
                     <artifactId>gson</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>oauth2-oidc-sdk</artifactId>
+            <version>${oauth2-oidc-sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
