--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <idporten-actuator-starter.version>2.0.0</idporten-actuator-starter.version>
         <idporten-access-log.version>2.8.0</idporten-access-log.version>
         <idporten-audit-version>2.5.0</idporten-audit-version>
+        <idporten-validators.version>1.6.0</idporten-validators.version>
         <opentelemetry-api.version>1.51.0</opentelemetry-api.version>
         <surefire.plugin.version>3.5.3</surefire.plugin.version>
         <log4j2.version>2.16.0</log4j2.version>
@@ -41,6 +42,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>no.idporten.validators</groupId>
+            <artifactId>idporten-validators</artifactId>
+            <version>${idporten-validators.version}</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
