--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,12 @@
         <idporten-actuator-starter.version>2.0.0</idporten-actuator-starter.version>
         <idporten-access-log.version>2.8.0</idporten-access-log.version>
         <idporten-audit-version>2.5.0</idporten-audit-version>
+        <idporten-validators.version>1.6.0</idporten-validators.version>
         <opentelemetry-api.version>1.51.0</opentelemetry-api.version>
         <surefire.plugin.version>3.5.3</surefire.plugin.version>
         <log4j2.version>2.16.0</log4j2.version>
         <nimbus-jose-jwt.version>10.3.1</nimbus-jose-jwt.version>
+        <oauth2-oidc-sdk.version>11.26</oauth2-oidc-sdk.version>
         <gson.version>2.13.1</gson.version> <!-- Gson version used by nimbus-jose-jwt, but for some reason the wrong version is included. remove when fixed-->
         <lombok.version>1.18.38</lombok.version>
         <slf4j-api.version>2.0.17</slf4j-api.version>
@@ -40,6 +42,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>no.idporten.validators</groupId>
+            <artifactId>idporten-validators</artifactId>
+            <version>${idporten-validators.version}</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -75,6 +82,11 @@
                     <artifactId>gson</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>oauth2-oidc-sdk</artifactId>
+            <version>${oauth2-oidc-sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
