--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -2,6 +2,16 @@
 spring:
   application:
     environment: test
+  data:
+    redis:
+      password: ${REDIS_PASSWORD}
+      sentinel:
+        master: mymaster
+        password: ${REDIS_PASSWORD}
+        nodes:
+          - digital-lommebok-redis-sentinel-node-0.digital-lommebok-redis-sentinel-headless:26379
+          - digital-lommebok-redis-sentinel-node-1.digital-lommebok-redis-sentinel-headless:26379
+          - digital-lommebok-redis-sentinel-node-2.digital-lommebok-redis-sentinel-headless:26379
 
 oauth-authorization-server:
   issuer: https://auth.test.eidas2sandkasse.net
