--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,30 @@
 ---
 server:
   port: 8080
+  servlet:
+    context-path: /
+    session:
+      tracking-modes:
+        - cookie
+      cookie:
+        same-site: lax
+        secure: true
+        name: ${spring.application.name}-session
+      timeout: 30m
 
 spring:
   thread-executor: virtual
   application:
     name: digital-lommebok-oauth-server
     environment: default
+  session:
+    store-type: redis
+    redis:
+      namespace: "${spring.application.name}:session"
+  data:
+    redis:
+      timeout: 3s
+      connect-timeout: 3s
 
 # Spring Boot Actuator
 management:
