--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,22 @@
             <version>${idporten-actuator-starter.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>no.idporten.logging</groupId>
             <artifactId>idporten-access-log-spring-boot-3-starter</artifactId>
             <version>${idporten-access-log.version}</version>
