--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,21 @@ networks:
     name: eudiw
 
 services:
+  redis:
+    image: redis:alpine
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 5s
+      start_period: 3s
+      timeout: 2s
+      retries: 20
+    ports:
+      - "9262:6379"
+    networks:
+      - eudiw
+    command: redis-server --maxmemory-policy allkeys-lru
+
+
   digital-lommebok-oauth-server:
     build:
       context: .
@@ -19,14 +34,14 @@ services:
     ports:
       - "9260:9260"
       - "9261:9261"
-      - "9262:9262"
+      - "9265:9265"
     networks:
       - eudiw
     entrypoint: "/bin/bash -c"
     command:
       - |
         cd /usr/local/tomcat/webapps/
-        java -javaagent:opentelemetry-javaagent.jar -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9262 -jar application.jar
+        java -javaagent:opentelemetry-javaagent.jar -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9265 -jar application.jar
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:9261/health/readiness || exit 1
       interval: 15s
