EUW-425: docker standardisation for local development

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ OIDC_CLIENT_KEYSTORE_PASSWORD=changeit
 OIDC_CLIENT_KEYSTORE_KEY_ALIAS=eudiw-oauth-server
 OIDC_CLIENT_KEYSTORE_KEY_PASSWORD=changeit
 
+OTEL_METRICS_EXPORTER=none
+OTEL_TRACES_EXPORTER=none
+OTEL_LOGS_EXPORTER=none
+OTEL_EXPORTER_OTLP_PROTOCOL=none
